revised apis, updated to latest netty